# SimpleKeyboardPlayer

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp  player.cpp
src/headers/: audio.h  player.h
